# SVI-to-POI

./: .env.example  .gitignore  CLAUDE.md  CLAUDE.md.backup  README.md  pyproject.toml  requirements.txt
docs/: colmap_assessment_status.md  colmap_vs_photogeometry_decision.md
docs/plans/: 2026-01-24-update-claude-md.md
docs/research/: camera_parameters_summary.md  mapillary_sfm_cluster_guide.md  wemap-poi-dataset-summary.md
docs/tutorial/: blocks_11_15_implementation_summary.md  pipeline_flow_guide.md  tutorial_summary.md  understanding_depth_maps.md
scripts/: 00_setup_env.py  01_download_mapillary_samples.py  01_download_samples.py  02_scrape_mapillary_tiles.py  03_compare_coverage.py  04_investigate_depth.py  05_sequence_metadata_investigation.py  06_colmap_quality_assessment.py  analyze_camera_parameters.py
scripts/tutorial/: 00_pipeline_tutorial.py  inspect_depth_map.py  stress_test.py
scripts/tutorial/data/debug/: tutorial_depth_analysis_summary.json  tutorial_hcmc_areas.html  tutorial_tiles_small_test.html
src/: __init__.py  crawler.py
tests/: test_crawler.py  test_depth_calculation.py  test_mapillary_tiles.py
